@@ -1,3 +1,12 @@
+2002-08-24  Paolo Maggi  <maggi@athena.polito.it>
+
+	* gedit-file.c (gedit_file_revert_dialog): new function
+	(gedit_file_revert): ask the user if she really wants to revert the file
+	
+	* geduit-undo-manager.c 
+	(gedit_undo_manager_end_not_undoable_action_internal): new function
+	(gedit_undo_manager_end_not_undoable_action): reset actions list
+
 2002-08-16  Paolo Maggi  <maggi@athena.polito.it>
 
 	* gedit-file.c (gedit_file_save_as): fixed bug #90879 (thanks to
